--- a/Titanic_notebook.ipynb
+++ b/Titanic_notebook.ipynb
@@ -1981,11 +1981,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Conclusion : Using a Voting Classifier with some previously trained model resulted in the best predictions that I submitted."
+   ]
   }
  ],
  "metadata": {
